fixed minor things related to spacing

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -92,8 +92,7 @@ button.cancel {
 
 .miw{
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
+  justify-content: flex-end;
 }
 
 .text{
